* Number now costs 50 bits. * Fixed cost of multiple plays bug. * Can't bet if balance is too low (server side and client side). * Added balance icon * Added number cost.

--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,19 @@ nav ul a {
 .smaller {
     font-size: 15px;
 }
+
+.price-text {
+    font-size: 17px;
+    font-style: italic;
+    font-weight: 500;
+}
+
+.balance-alert {
+    color: red;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+.hidden {
+    visibility: hidden;
+}
